# cpp_snake_game

./: .gitignore  CMakeLists.txt  README.md  snake_tests
include/: grid.h  snake.h
src/: grid.cpp  main.cpp  snake.cpp
